Add more tutorial content

--- a/index.html
+++ b/index.html
@@ -11,9 +11,56 @@
         <h1>Welcome to Our Tutorial</h1>
     </header>
     <main>
-        <section>
-            <h2>Getting Started</h2>
-            <p>This is a simple tutorial page where we'll add more content later.</p>
+        <section class="introduction">
+            <h2>Introduction</h2>
+            <p>This tutorial will guide you through creating your first YouTube video. We'll cover everything from planning your content to uploading and optimizing your video for viewers.</p>
+        </section>
+
+        <section class="prerequisites">
+            <h2>Prerequisites</h2>
+            <ul>
+                <li>A computer with internet connection</li>
+                <li>Basic video recording equipment (smartphone or camera)</li>
+                <li>Video editing software (we recommend free options like OpenShot or DaVinci Resolve)</li>
+                <li>A YouTube account</li>
+            </ul>
+        </section>
+
+        <section class="instructions">
+            <h2>Step-by-Step Guide</h2>
+            <ol>
+                <li>
+                    <h3>Plan Your Content</h3>
+                    <p>Start by outlining your video topic and creating a basic script or talking points.</p>
+                </li>
+                <li>
+                    <h3>Record Your Video</h3>
+                    <p>Find a quiet location with good lighting and record your content.</p>
+                </li>
+                <li>
+                    <h3>Edit Your Video</h3>
+                    <p>Use your chosen editing software to trim clips and add transitions.</p>
+                </li>
+                <li>
+                    <h3>Upload to YouTube</h3>
+                    <p>Export your video and upload it to your YouTube channel.</p>
+                </li>
+            </ol>
+        </section>
+
+        <section class="code-example">
+            <h2>Example Metadata Template</h2>
+            <pre><code>
+Title: How to [Specific Topic] - Beginner's Guide [Year]
+Description:
+🎥 In this video, you'll learn...
+
+Timestamps:
+0:00 - Introduction
+1:00 - Getting Started
+
+Tags: tutorial, how-to, beginner guide
+            </code></pre>
         </section>
     </main>
     <footer>
